work-done-on-proto